--- a/Apq_DBTools/Apq_DBTools/App.config
+++ b/Apq_DBTools/Apq_DBTools/App.config
@@ -1,9 +1,12 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-	<appSettings>
-		<add key="Apq.DBC.csFile" value="D:\DBA\cs\DBI.res"/>
-	</appSettings>
-	<startup>
-		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/>
-	</startup>
+  <appSettings>
+    <add key="Apq.DBC.csFile" value="D:\DBA\cs\DBI.res" />
+  </appSettings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client" />
+  </startup>
+  <connectionStrings>
+    <add name="dbvEntities" connectionString="metadata=res://*/EF.dbv.csdl|res://*/EF.dbv.ssdl|res://*/EF.dbv.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=172.18.18.2;User Id=root;password=f;Persist Security Info=True;database=test&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
