--- a/Apq_DBTools/Apq_DBTools/Apq.DBC.dll.config
+++ b/Apq_DBTools/Apq_DBTools/Apq.DBC.dll.config
@@ -4,4 +4,7 @@
 	</configSections>
 	<connectionStrings>
 	</connectionStrings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/></startup></configuration>
+	<startup>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/>
+	</startup>
+</configuration>
