--- a/Apq_DBTools/Apq_DBTools/Apq_DBTools.csproj
+++ b/Apq_DBTools/Apq_DBTools/Apq_DBTools.csproj
@@ -142,6 +142,9 @@
       <HintPath>Dlls\log4net.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualBasic" />
+    <Reference Include="MySql.Data, Version=6.4.3.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <Private>True</Private>
+    </Reference>
     <Reference Include="NCharDet">
       <HintPath>Dlls\NCharDet.dll</HintPath>
     </Reference>
@@ -211,6 +214,11 @@
     <Compile Include="Forms\FSRename.Designer.cs">
       <DependentUpon>FSRename.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\SqlGen_XSD.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>SqlGen_XSD.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GlobalObject.cs" />
     <Compile Include="MainForm.cs">
@@ -237,6 +245,18 @@
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>dbv.Designer.cs</LastGenOutput>
     </EntityDeploy>
+    <None Include="Apq_DBTools.EF.Meta.datasource" />
+    <None Include="Forms\SqlGen_XSD.xsc">
+      <DependentUpon>SqlGen_XSD.xsd</DependentUpon>
+    </None>
+    <None Include="Forms\SqlGen_XSD.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>SqlGen_XSD.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="Forms\SqlGen_XSD.xss">
+      <DependentUpon>SqlGen_XSD.xsd</DependentUpon>
+    </None>
     <None Include="Images\ArrowDown.bmp" />
     <None Include="Images\ArrowUp.bmp" />
     <None Include="Images\Bitmap.ico" />
@@ -374,6 +394,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controls\MainOption\" />
+    <Folder Include="Sql\MsSql\" />
+    <Folder Include="Sql\MySql\" />
     <Folder Include="_Doc\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
