元数据导出为MySql语句
Signed-off-by: amwpfiqvy <amwpfiqvy@163.com>

--- a/Apq_DBTools/Apq_DBTools/Apq_DBTools.csproj
+++ b/Apq_DBTools/Apq_DBTools/Apq_DBTools.csproj
@@ -214,6 +214,10 @@
     <Compile Include="Forms\FSRename.Designer.cs">
       <DependentUpon>FSRename.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\SqlGen_XSD.cs">
+      <DependentUpon>SqlGen_XSD.xsd</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Forms\SqlGen_XSD.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
