--- a/Apq/Apq/Apq.csproj
+++ b/Apq/Apq/Apq.csproj
@@ -190,6 +190,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>Dlls\log4net.dll</HintPath>
     </Reference>
+    <Reference Include="MySql.Data, Version=6.4.3.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core">
@@ -235,6 +236,7 @@
     <Compile Include="Config\IniConfig.cs" />
     <Compile Include="Config\RegConfig.cs" />
     <Content Include="DB\Apq_String.cs.txt" />
+    <Compile Include="Data\MySqlClient\Common.cs" />
     <Compile Include="DllImports\Shell32.cs" />
     <Compile Include="Dos\Common.cs" />
     <Compile Include="Drawing\GraphicsHelper.cs" />
