增加错误列表，Mysql以分页查询方式导出语句
Signed-off-by: amwpfiqvy <amwpfiqvy@163.com>

--- a/Apq/Apq/Apq.csproj
+++ b/Apq/Apq/Apq.csproj
@@ -212,6 +212,7 @@
     <Compile Include="Apq\Delegates.cs" />
     <Compile Include="Apq\GlobalObject.cs" />
     <Compile Include="Apq\SingletonInstances.cs" />
+    <Compile Include="Collections\IListT.cs" />
     <Compile Include="ComponentModel\BackgroundWorker.cs" />
     <Compile Include="Config\ConfigChain.cs" />
     <Compile Include="ConnectionStrings\Access\OleDbConnection.cs" />
