--- a/Apq/Apq.Win/Apq.Win.csproj
+++ b/Apq/Apq.Win/Apq.Win.csproj
@@ -269,11 +269,26 @@
       <DependentUpon>AboutBox.cs</DependentUpon>
     </Compile>
     <Compile Include="Windows\Forms\Application.cs" />
+    <Compile Include="Windows\Forms\DockForms\ErrList_XSD.cs">
+      <DependentUpon>ErrList_XSD.xsd</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Windows\Forms\DockForms\ErrList_XSD.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ErrList_XSD.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Windows\Forms\DockForms\UILangCfg.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Windows\Forms\DockForms\UILangCfg.Designer.cs">
       <DependentUpon>UILangCfg.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Windows\Forms\DockForms\ErrList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Windows\Forms\DockForms\ErrList.Designer.cs">
+      <DependentUpon>ErrList.cs</DependentUpon>
     </Compile>
     <Compile Include="Windows\Forms\ImeForm.cs">
       <SubType>Form</SubType>
@@ -316,6 +331,17 @@
     <None Include="Windows\Forms\DBConnector_XSD.xss">
       <DependentUpon>DBConnector_XSD.xsd</DependentUpon>
     </None>
+    <None Include="Windows\Forms\DockForms\ErrList_XSD.xsc">
+      <DependentUpon>ErrList_XSD.xsd</DependentUpon>
+    </None>
+    <None Include="Windows\Forms\DockForms\ErrList_XSD.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>ErrList_XSD.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="Windows\Forms\DockForms\ErrList_XSD.xss">
+      <DependentUpon>ErrList_XSD.xsd</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -340,6 +366,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Windows\Forms\DockForms\UILangCfg.resx">
       <DependentUpon>UILangCfg.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Windows\Forms\DockForms\ErrList.resx">
+      <DependentUpon>ErrList.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Windows\Forms\ImeForm.resx">
       <SubType>Designer</SubType>
