--- a/Apq_DBTools/Apq_DBTools/Apq_DBTools.csproj
+++ b/Apq_DBTools/Apq_DBTools/Apq_DBTools.csproj
@@ -218,6 +218,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>SqlGen_XSD.xsd</DependentUpon>
     </Compile>
+    <Compile Include="Forms\SqlGenPanel.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\SqlGenPanel.Designer.cs">
+      <DependentUpon>SqlGenPanel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GlobalObject.cs" />
     <Compile Include="MainForm.cs">
@@ -280,6 +286,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FSRename.resx">
       <DependentUpon>FSRename.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\SqlGenPanel.resx">
+      <DependentUpon>SqlGenPanel.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
