--- a/Reference/Reference.csproj
+++ b/Reference/Reference.csproj
@@ -92,6 +92,21 @@
     <Content Include="Res\Apq.Win\ico\clarity.ico" />
     <Content Include="Res\Apq.Win\Pic\Logo.png" />
     <Content Include="Res\Apq\Pic\Logo.png" />
+    <Content Include="Res\Common\ico\back.ico" />
+    <Content Include="Res\Common\ico\copy.ico" />
+    <Content Include="Res\Common\ico\cut.ico" />
+    <Content Include="Res\Common\ico\email.ico" />
+    <Content Include="Res\Common\ico\error.ico" />
+    <Content Include="Res\Common\ico\favorites.ico" />
+    <Content Include="Res\Common\ico\forward.ico" />
+    <Content Include="Res\Common\ico\history.ico" />
+    <Content Include="Res\Common\ico\home.ico" />
+    <Content Include="Res\Common\ico\paste.ico" />
+    <Content Include="Res\Common\ico\print.ico" />
+    <Content Include="Res\Common\ico\refresh.ico" />
+    <Content Include="Res\Common\ico\search.ico" />
+    <Content Include="Res\Common\ico\info.ico" />
+    <Content Include="Res\Common\ico\stop.ico" />
     <Content Include="Res\szDomain_TestWin\ico\1.ico" />
     <Content Include="Res\szDomain_TestWin\ico\4.ico" />
     <Content Include="Res\szDomain_TestWin\ico\8.ico" />
