--- a/Reference/Reference.csproj
+++ b/Reference/Reference.csproj
@@ -97,16 +97,21 @@
     <Content Include="Res\Common\ico\cut.ico" />
     <Content Include="Res\Common\ico\email.ico" />
     <Content Include="Res\Common\ico\error.ico" />
+    <Content Include="Res\Common\ico\eventlogError.ico" />
+    <Content Include="Res\Common\ico\eventlogInfo.ico" />
+    <Content Include="Res\Common\ico\eventlogWarn.ico" />
     <Content Include="Res\Common\ico\favorites.ico" />
     <Content Include="Res\Common\ico\forward.ico" />
     <Content Include="Res\Common\ico\history.ico" />
     <Content Include="Res\Common\ico\home.ico" />
+    <Content Include="Res\Common\ico\none.ico" />
     <Content Include="Res\Common\ico\paste.ico" />
     <Content Include="Res\Common\ico\print.ico" />
     <Content Include="Res\Common\ico\refresh.ico" />
     <Content Include="Res\Common\ico\search.ico" />
     <Content Include="Res\Common\ico\info.ico" />
     <Content Include="Res\Common\ico\stop.ico" />
+    <Content Include="Res\Common\ico\warning.ico" />
     <Content Include="Res\szDomain_TestWin\ico\1.ico" />
     <Content Include="Res\szDomain_TestWin\ico\4.ico" />
     <Content Include="Res\szDomain_TestWin\ico\8.ico" />
