--- a/Apq_DBTools/Apq_DBTools/Apq_DBTools.csproj
+++ b/Apq_DBTools/Apq_DBTools/Apq_DBTools.csproj
@@ -375,12 +375,29 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Res\ico\Text.ico" />
-    <Content Include="Sql\MySql\Apq_CreateNewTable.sql" />
-    <Content Include="Sql\MySql\Apq_CreateTable_BuildLog.sql">
+    <Content Include="Sql\MySql\Apq_CreateNewTable.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Sql\MySql\BuildSchema\Apq_BuildSchema.sql" />
     <Content Include="Sql\MySql\BuildSchema\BuildColumn\Apq_BuildColumn.sql" />
+    <Content Include="Sql\MySql\dbv_BuildLog.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Sql\MySql\dbv_column.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Sql\MySql\dbv_proc.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Sql\MySql\dbv_table.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Sql\MySql\dbv_trigger.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Sql\MySql\dbv_view.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="Apq.DBC.dll.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
