--- a/Apq_DBTools/Apq_DBTools/Apq_DBTools.csproj
+++ b/Apq_DBTools/Apq_DBTools/Apq_DBTools.csproj
@@ -333,6 +333,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="dbv_table_key.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Res\ico\blockOS 43 System File.ico" />
     <Content Include="Res\ico\Key.ico" />
     <Content Include="Res\ico\sign125.ico">
